--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           </div>
         </div>
 
-        <div class="row content" id="main_content">
-
+        <div class="row content" id="main_content2">
+ a
         </div>
 
     <script src="js/vendor/jquery.js"></script>
