--- a/aa.html
+++ b/aa.html
@@ -14,7 +14,7 @@
           <div id="responsive-menu">
             <div class="top-bar-left">
               <ul class="dropdown menu" data-dropdown-menu>
-                <li><a href="#main">mai냐하하하핳하n</a></li>
+                <li><a href="#main">main</a></li>
                 <li><a href="#img">img</a></li>
                 <li><a href="#setting">setting</a></li>
               </ul>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="row content" id="main_content2">
- a마마맘마마마맘
+ a
         </div>
 
     <script src="js/vendor/jquery.js"></script>
